# gxde-file-manager

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Qt6Note.txt  README.md  build-deb  filemanager.pro  translate_generation.sh
dde-file-thumbnail-tool/video/: CMakeLists.txt
gxde-desktop-panel/: CMakeLists.txt  desktop.cpp  gxde-desktop-panel-build.pri  gxde-desktop-panel.pro  main.cpp  qwayland-treeland-dde-shell-v1.cpp  qwayland-treeland-dde-shell-v1.h  translate_generation.sh  translate_ts2desktop.sh  wayland-treeland-dde-shell-v1-client-protocol.h  wayland-treeland-dde-shell-v1-protocol.c
gxde-desktop-panel/model/: dfileselectionmodel.cpp
gxde-desktop-panel/presenter/: dfmsocketinterface.cpp  display.cpp  display.h  gridcore.h  gridmanager.cpp
gxde-desktop-panel/translations/: gxde-desktop-panel.ts  gxde-desktop-panel_am_ET.ts  gxde-desktop-panel_ar.ts  gxde-desktop-panel_ast.ts  gxde-desktop-panel_bg.ts  gxde-desktop-panel_bn.ts  gxde-desktop-panel_ca.ts  gxde-desktop-panel_cs.ts  gxde-desktop-panel_da.ts  gxde-desktop-panel_de.ts  gxde-desktop-panel_el.ts  gxde-desktop-panel_en_AU.ts  gxde-desktop-panel_es.ts  gxde-desktop-panel_es_419.ts  gxde-desktop-panel_fi.ts  gxde-desktop-panel_fr.ts  gxde-desktop-panel_gl_ES.ts  gxde-desktop-panel_hr.ts  gxde-desktop-panel_hu.ts  gxde-desktop-panel_id.ts  gxde-desktop-panel_it.ts  gxde-desktop-panel_ja.ts  gxde-desktop-panel_ko.ts  gxde-desktop-panel_lt.ts  gxde-desktop-panel_ml.ts  gxde-desktop-panel_mn.ts  gxde-desktop-panel_ms.ts  gxde-desktop-panel_nb.ts  gxde-desktop-panel_nl.ts  gxde-desktop-panel_pa.ts  gxde-desktop-panel_pl.ts  gxde-desktop-panel_pt.ts  gxde-desktop-panel_pt_BR.ts  gxde-desktop-panel_ru.ts  gxde-desktop-panel_sk.ts  gxde-desktop-panel_sl.ts  gxde-desktop-panel_sq.ts  gxde-desktop-panel_sr.ts  gxde-desktop-panel_sv.ts  gxde-desktop-panel_ta.ts  (+5 more)
gxde-desktop-panel/util/: util.pri
gxde-desktop-panel/view/: backgroundhelper.cpp  backgroundhelper.h  canvasgridview.cpp  canvasgridview.h  canvasviewhelper.cpp
gxde-dock-plugins/disk-mount/: CMakeLists.txt  disk-mount.pro  diskcontrolitem.cpp
gxde-file-manager/: CMakeLists.txt  gxde-file-manager.pro  main.cpp  singleapplication.cpp  translate_ts2desktop.sh
gxde-file-manager-daemon/: CMakeLists.txt  gxde-file-manager-daemon.pro
gxde-file-manager-daemon/app/: policykithelper.h
gxde-file-manager-daemon/commandmanager/: commandmanager.cpp
gxde-file-manager-daemon/usbformatter/: usbformatter.cpp
gxde-file-manager-lib/: CMakeLists.txt  gxde-file-manager-lib.pro  gxde-file-manager.pc.in
gxde-file-manager-lib/app/: filesignalmanager.h
gxde-file-manager-lib/configure/: global-setting-template-fedora.js  global-setting-template-pro.js  global-setting-template.js
gxde-file-manager-lib/controllers/: appcontroller.cpp  appcontroller.h  filecontroller.cpp  fileeventprocessor.cpp  masteredmediacontroller.cpp  mergeddesktopcontroller.cpp  recentcontroller.cpp
gxde-file-manager-lib/dialogs/: basedialog.cpp  burnoptdialog.cpp  closealldialogindicator.cpp  computerpropertydialog.cpp  ddesktoprenamedialog.cpp  dfmsettingdialog.cpp  dialogmanager.cpp  dmultifilepropertydialog.cpp  filepreviewdialog.cpp  openwithdialog.cpp  previewdialog.cpp  propertydialog.cpp  shareinfoframe.cpp
gxde-file-manager-lib/interfaces/: dabstractfileinfo.cpp  dfileinfo.cpp  dfilemenu.cpp  dfilemenumanager.cpp  dfileservices.cpp  dfilesystemmodel.cpp  dfilesystemwatcher.cpp  dfileviewhelper.cpp  dfmapplication.cpp  dfmapplication.h  dfmbaseview.cpp  dfmbaseview.h  dfmcrumbbar.cpp  dfmcrumbitem.cpp  dfmcrumbmanager.cpp  dfmeventdispatcher.cpp  dfmglobal.cpp  dfmglobal.h  dfmsettings.cpp  dfmsidebar.cpp  dfmsidebaritem.cpp  dfmsidebaritem.h  dfmviewmanager.cpp  diconitemdelegate.cpp  dlistitemdelegate.cpp  dstyleditemdelegate.cpp  dthumbnailprovider.cpp  durl.cpp
gxde-file-manager-lib/io/: dfilecopymovejob.cpp  dfilehandler.h  dfilestatisticsjob.cpp  dgiofiledevice.cpp  dlocalfilehandler.cpp  dstorageinfo.cpp  dstorageinfo.h
gxde-file-manager-lib/models/: desktopfileinfo.cpp  masteredmediafileinfo.cpp  mergeddesktopfileinfo.cpp  recentfileinfo.cpp  searchfileinfo.cpp  trashfileinfo.cpp
gxde-file-manager-lib/shutil/: desktopfile.cpp  dfm_xdgdesktopfile_compat.h  dsqlitehandle.cpp  fileutils.cpp  mimesappsmanager.cpp
gxde-file-manager-lib/skin/: filemanager.qrc
gxde-file-manager-lib/themes/: themes.qrc
gxde-file-manager-lib/translations/: gxde-file-manager.ts  gxde-file-manager_am_ET.ts  gxde-file-manager_ar.ts  gxde-file-manager_ast.ts  gxde-file-manager_bg.ts  gxde-file-manager_bn.ts  gxde-file-manager_ca.ts  gxde-file-manager_cs.ts  gxde-file-manager_da.ts  gxde-file-manager_de.ts  gxde-file-manager_el.ts  gxde-file-manager_eo.ts  gxde-file-manager_es.ts  gxde-file-manager_es_419.ts  gxde-file-manager_fi.ts  gxde-file-manager_fr.ts  gxde-file-manager_gl_ES.ts  gxde-file-manager_hr.ts  gxde-file-manager_hu.ts  gxde-file-manager_id.ts  gxde-file-manager_it.ts  gxde-file-manager_ja.ts  gxde-file-manager_ko.ts  gxde-file-manager_lt.ts  gxde-file-manager_ml.ts  gxde-file-manager_mn.ts  gxde-file-manager_ms.ts  gxde-file-manager_nb.ts  gxde-file-manager_nl.ts  gxde-file-manager_pa.ts  gxde-file-manager_pl.ts  gxde-file-manager_pt.ts  gxde-file-manager_pt_BR.ts  gxde-file-manager_ru.ts  gxde-file-manager_sk.ts  gxde-file-manager_sl.ts  gxde-file-manager_sr.ts  gxde-file-manager_ta.ts  gxde-file-manager_tr.ts  gxde-file-manager_ug.ts  (+3 more)
gxde-file-manager-lib/views/: computerview.cpp  ddragwidget.h  dfiledialog.cpp  dfilemanagerwindow.cpp  dfilemanagerwindow.h  dfileview.cpp  dfileview.h  dfmadvancesearchbar.cpp  dfmpreviewsidebar.cpp  dfmpreviewsidebar.h  dfmsidebaropticaldevitem.cpp  dfmsplitter.cpp  dfmsplitter.h  dhoverbutton.cpp  dhoverbutton.h  drenamebar.cpp  droundbutton.cpp  droundbutton.h  dstatusbar.cpp  dtabbar.cpp  dtagactionwidget.cpp  dtagedit.cpp  fileitem.cpp  themeconfig.cpp  windowmanager.cpp
gxde-file-manager-plugins/pluginPreview/: CMakeLists.txt  pluginPreview.pro
usb-device-formatter/: CMakeLists.txt  main.cpp  translate_ts2desktop.sh  usb-device-formatter.pro
(+120 files in other folders)
